--- a/TypingSpeedApp/typing_game_styles.css
+++ b/TypingSpeedApp/typing_game_styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    text-align: center;
+    text-align      : center;
     background-color: rgb(241, 241, 228);
 }
 
@@ -44,8 +44,8 @@ body {
     background-color  : #c3d147;
     padding           : 10px 0;
     border-radius     : 20%;
-    width             : 60px;
-    height            : 60px;
+    width             : 70px;
+    height            : 65px;
     /* justify-content: flex-start; */
     box-shadow        : #000000 5px 6px 5px;
 }
@@ -56,9 +56,9 @@ body {
 }
 
 .text {
-    font-size     : 0.5rem;
+    font-size     : 0.55rem;
     text-transform: uppercase;
-    font-weight   : 600;
+    font-weight   : bolder;
 }
 
 .wpm_val,
@@ -66,7 +66,11 @@ body {
 .error_val,
 .timer_val,
 .accuracy_val {
-    font-size: 1.6rem;
+    font-size: 1.7rem;
+}
+
+.accuracy_val {
+    padding-top: 2px;
 }
 
 .quote {
